src/Base/main/default/objects/Marketing_Image__c/fields/Active_S3_Object__c.field-meta.xml
<CustomField>
    <fullName>Active_S3_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active S3 Object</label>
    <referenceTo>AWS_S3_Object__c</referenceTo>
    <relationshipLabel>Marketing Images (Active S3 Object)</relationshipLabel>
    <relationshipName>Active_Marketing_Images</relationshipName>
    <type>Lookup</type>
</CustomField>