src/Base/main/default/objects/Marketing_Image__c/fields/AWS_S3_Object__c.field-meta.xml
<CustomField>
    <fullName>AWS_S3_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AWS S3 Object</label>
    <referenceTo>AWS_S3_Object__c</referenceTo>
    <relationshipLabel>Marketing Images</relationshipLabel>
    <relationshipName>Marketing_Images</relationshipName>
    <type>Lookup</type>
</CustomField>