src/Base/main/default/objects/Marketing_Image__c/fields/ENG_Description__c.field-meta.xml
<CustomField>
    <fullName>ENG_Description__c</fullName>
    <label>ENG Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>